# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli.py
brain_games/Games/: calc.py  cals.py  even.py  gcd.py  prime.py  progression.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/logic/: game_logic.py
brain_games/scripts/: brain_calc.py  brain_cals.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  logicss.py
