[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["off <rembo151098@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"


prompt = "^0.4.1"
[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:game_counter"
brain-games = "brain_games.scripts.brain_games:main"
brain-cals = "brain_games.scripts.brain_cals:Even_or_odd"